# torchforge

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  GRPO_BUG_FIX_SUMMARY.md  README.md  coding_example.ipynb  demo.ipynb  force_memory_reclaim.sh  index.html  metrics_logging_pr_review.md  monitor_shm.sh  per_timestep_logging_implementation_plan.md  proposed_structure.md  pyproject.toml  show_process_shm.py  test.py  test_numpy_leak.py  test_plan_metrics.md  test_torch_gc.py  track_kernel_memory.py  track_memory_leak.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml
.github/packaging/: build_for_ci.sh  export_channel_test.sh  post_build_script.sh  pre_build_cpu.sh  pre_build_gpu.sh  pre_build_script.sh  smoke_test.sh  vllm_reqs.txt
.github/workflows/: activate_conda_env.sh  build_linux_wheels.yaml  build_torchtitan_wheel.yml  build_vllm.yaml  build_vllm_nightly.yaml  build_wheels.yaml  ci.yaml  continuous_integration_test.yaml  docs.yml  gpu_test.yaml  main.yml  python_is_python3.sh  tests-cpu.yaml  unit_test.yaml
.meta/mast/: README.md  client_bootstrap.sh  env_setup.sh  launch.sh  local_test.yaml  main.py  qwen3_14b_mast.yaml  qwen3_1_7b_mast.yaml  qwen3_32b_mast.yaml  qwen3_4b_mast.yaml  qwen3_8b_mast.yaml
_scratch/: multi_host.py  stacked_envs.py  vllm.py  vllm_2.py
apps/distillation/: main.py  qwen3_distillation.yaml
apps/grpo/: __init__.py  algorithms.py  gpt_oss_20b.yaml  llama3_8b.yaml  main.py  main_no_reward.py  mast_main.py  multihost.yaml  notebook.ipynb  qwen3_14b_mast.yaml  qwen3_1_7b.yaml  qwen3_1_7b_mast.yaml  qwen3_30b_a3.yaml  qwen3_30b_a3b.yaml  qwen3_30b_moe.yaml  qwen3_32b.yaml  qwen3_32b_experimental.yaml  qwen3_32b_mast.yaml  qwen3_4b_mast.yaml  qwen3_8b.yaml  qwen3_8b_mast.yaml  qwen3_multinode.yaml  test.py
apps/mast/: README.md  env_setup.sh  main.py  qwen3_14b_mast.yaml  qwen3_1_7b_mast.yaml  qwen3_32b_mast.yaml  qwen3_4b_mast.yaml  qwen3_8b_mast.yaml
apps/on-policy-distillation/: main.py  qwen_0_6b_to_8b.yaml
apps/on_policy_distillation/: README.md  config.py  default.yaml  main.py  qwen_0_6b_to_8b.yaml
apps/rl/: llama3_8b.yaml  main.py  qwen3_30b_a3b.yaml
apps/sft/: README.md  actor.py  deepseek_v3.yaml  eval_utils.py  interactive_config_notebook.ipynb  llama3_8b.yaml  main.py  qwen3_32b.yaml  qwen3_8b.yaml  sft.py  sft.sh  spawn_actor.py  test_evaluate.py  trainer_actor.py  utils.py
apps/sft_v2/: llama3_8b.yaml  main.py  qwen3_30b_a3b.yaml  qwen3_8b.yaml
apps/sumdigits/: main.py  sum_digits_data_loader.py  sum_digits_scorer.py
apps/toy_metrics/: main.py
apps/toy_rl/: components.py  interfaces.py  main.py  sumdigits-tp.yaml  sumdigits.py  sumdigits.yaml  test_toy_rl.py
apps/trainer/: main.py
apps/vllm/: config.yaml  judge.py  llama3_8b.yaml  main.py  qwen2_5_32b.yaml  qwen3_30b_moe.yaml  rewardjudge.py
assets/: versions.sh
assets/wheels/: torchstore-0.1.0-py3-none-any.whl  torchtitan-0.1.0-py3-none-any.whl
brainstorming/configs/: baseline.yaml  config_dataclasses.py  config_dicts.py  config_fiddle.py  config_hydra.py  config_partial.py  mock.py  mock_with_config.py
brainstorming_forge_tau/tutorials/: 1_tau2bench_overview.md  2_fundamentals.md  3_forge_current_state.md  4_forge_ideal_state.md
docs/: make.bat  requirements.txt
docs/Tutorials/: 1_RL_and_Forge_Fundamentals.MD  2_Forge_Internals.MD  3_Monarch_101.MD  ReadMe.MD
docs/source/: api.md  api_actors.md  api_cli.md  api_controller.md  api_core.md  api_data.md  api_data_models.md  api_envs.md  api_generator.md  api_losses.md  api_service.md  api_types.md  api_util.md  architecture.md  concepts.md  conf.py  faq.md  getting_started.md  index.md  rl_workflows.md  technology_stack.md  (+2 more)
examples/: rl_main.py  services.py  stacked_envs.py  train_actor.py
forge/: config_manager.py  interfaces.py  types.py
launcher/: job.slurm
main/: api.html  api_actors.html  api_controller.html  api_core.html  api_data.html  api_envs.html  api_generator.html  api_losses.html  api_model.html  api_service.html  api_trainer.html  api_util.html  concepts.html  faq.html  genindex.html  getting_started.html  index.html  metric_logging.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sitemap.xml  tutorials.html  usage.html  zero-to-forge-intro.html
scripts/: build_wheels.sh  install.sh
tests/: conftest.py  test_replay_buffer.py  test_service.py  test_vllm_torchstore.py
(+321 files in other folders)
