# ---- All project specifications ---- #
[project]
name = "forge"
description = "A PyTorch native platform for post-training generative AI models"
readme = "README.md"
requires-python = ">=3.10, <=3.13"
license = {file = "LICENSE"}
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
keywords = ["pytorch", "training", "llm"]
dependencies = [
    # PyTorch
    "torchdata>=0.8.0",
    "torchtitan==0.1.0.dev20250912+cu128",
    # Hugging Face integrations
    "datasets>=2.21.0",
    "tokenizers",
    # Miscellaneous
    "omegaconf",
    "wandb",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch-labs/forge"
Documentation = "https://github.com/pytorch-labs/forge/tree/main/docs"
Issues = "https://github.com/pytorch-labs/forge/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "tensorboard",
    "expecttest",
    "tomli>=1.1.0",
    "anyio",
    "pytest-asyncio",
]
oss = [
    "torch==2.10.0.dev20250912+cu128",
    "torchmonarch-nightly==2025.9.12",
    "torchstore",
    "vllm==1.0.0.dev20250912+cu128"
]

[project.scripts]
forge = "forge.cli.forge:main"


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forge*"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks
pythonpath = "."

[tool.uv.workspace]
members = [
    "forge",
]

# pytorch
# TODO: get auto backend to work
[[tool.uv.index]]
name = "pytorch-nightly"
url  = "https://download.pytorch.org/whl/nightly"

[tool.uv.sources]
torchtitan = { index = "pytorch-nightly" }
torch = { index = "pytorch-nightly" }
torchstore = { git = "ssh://git@github.com/meta-pytorch/torchstore.git" }
vllm = { index = "pytorch-nightly" }

[tool.uv]
# TODO: revert to stricter default uv strategy
index-strategy = "unsafe-best-match"
prerelease = "allow"
# TODO: add more backends
environments = [
    "sys_platform == 'linux'",
]
# override-dependencies = ["torch>2.7.1", "torchaudio>=2.7.1", "torchvision>=0.22.0"]
